rust/test/dt/type_constructor/pair/pair_without_args_test.stderr
error: no rules expected the token `>`
 --> ../../../rust/test/dt/type_constructor/pair/pair_without_args_test.rs:5:27
  |
5 |   types!( pair Empty : <  > );
  |                           ^ no rules expected this token in macro call
